# ComfyUI_InteractAvatar

./: .gitignore  InteractAvatar_node.py  README.md  __init__.py  model_loader_utils.py  pyproject.toml  requirements.txt  test_inter_tia2mv_GPu_hoi.sh  test_wanx_tia2mv_obj_back.py
InterDemo/ActionAndSong/: demo_song_action.json
InterDemo/TIA2MV/: demo_tia2mv.json
InterDemo/TIAP2V/: demo_ap2v.json
configs/: multi_node_config.yaml
dwpose/: preprocess.py  util.py
example_workflows/: InteractAvatar.json
optimizers/: adamw_8bit.py  gradient_release.py
utils/: common.py  dataset.py  img_utils.py  mel_dataset.py  prepare_libritts.py
utils/audio_analysis/: find_lang.py  torch_utils.py  wav2vec2.py
wan/: __init__.py  tia2mv_obj_back_id_prefix.py
wan/configs/: __init__.py  shared_config.py  wan_i2v_1_3B.py  wan_i2v_1_3B_audio.py  wan_i2v_1_3B_avideo.py  wan_i2v_A14B.py  wan_ti2v_5B.py
wan/distributed/: fsdp.py  xdit_context_parallel.py
wan/modules/: __init__.py  attention.py  audio_VAE.py  clip.py  fc_model.py  model_tia2mv_rope_back.py  t5.py  tokenizers.py  vae2_2.py
wan/utils/: __init__.py  fm_solvers_unipc.py  multitalk_utils.py
